--- a/css/style.css
+++ b/css/style.css
@@ -367,5 +367,45 @@ nav ul li a.active {
     background: #e08e67;
 }
 
+@media screen and (max-width: 991px) {
+    .description {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding-top: 100px;
+        justify-content: center;
+        align-items: center;
+    }
+    .d-header {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        align-items: center;
+        text-align: center;
+        font-size: 3rem;
+        opacity: 0.7;
+    }
+    .d-cards {
+        margin-top: 30px;
+        display: grid;
+        grid-template-columns: repeat(1, 2fr);
+        grid-gap: 20px;
+        padding: 30px;
+    }
+}
+
 
 /* end of description */
+
+
+/* banner section */
+
+.banner {
+    display: flex;
+    width: 100%;
+    padding: 30px;
+    padding-top: 70px;
+}
+
+
+/* end of banner section */
