--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ nav ul li a.active {
     font-family: 'Montserrat', sans-serif;
 }
 
-.hero-text button {
+.donation {
     margin-top: 20px;
     width: 30%;
     padding: 25px;
@@ -208,7 +208,7 @@ nav ul li a.active {
         width: 100%;
         font-family: 'Montserrat', sans-serif;
     }
-    .hero-text button {
+    .donation {
         margin-top: 20px;
         width: 50%;
         padding: 25px;
@@ -403,8 +403,33 @@ nav ul li a.active {
 .banner {
     display: flex;
     width: 100%;
-    padding: 30px;
-    padding-top: 70px;
+    padding: 70px 30px;
+    background: #d3e9d8;
+}
+
+.banner-image {
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner-image img {
+    display: flex;
+    width: 100%;
+}
+
+.banner-text {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin-left: 70px;
+}
+
+.banner-text h3 {
+    font-size: 4rem;
+    display: flex;
+    width: 95%;
 }
 
 
