--- a/support/support.css
+++ b/support/support.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     background: rgb(207, 240, 233);
+    width: 100%;
 }
 
 
@@ -69,5 +70,88 @@
     margin-top: 20px;
     opacity: 0.8;
     width: 80%;
+    font-size: 1.3rem;
+    line-height: 1.8;
     text-align: center;
 }
+
+/* responsive */
+
+@media screen and (max-width: 991px){
+    .support-intro{
+        padding: 180px 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: rgb(207, 240, 233);
+    }
+    
+    
+    .intro-head{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        opacity: 0.7;
+    }
+    
+    .intro-head h3{
+        font-size: 2rem;
+        letter-spacing: 1.5px;
+    }
+    
+    .intro-head p{
+        margin-top: 20px;
+        width: 100%;
+        font-size: 1.2rem;
+        text-align: center;
+    }
+    
+    .support-forms{
+        opacity: 0.7;
+        display: grid;
+        grid-template-columns: repeat(1, 2fr);
+        margin-top: 50px;
+    }
+    
+    .forms{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 30px;
+    }
+    
+    .forms h1{
+        border: none;
+        border-radius: 50%;
+        font-size: 3rem;
+    }
+    
+    #volunteer{
+        background: rgb(253, 131, 109);
+        padding: 20px;
+        color: #fff;
+    }
+    
+    #fundraise{
+        background: rgb(143, 210, 236);
+        padding: 20px;
+        color: #fff;
+    }
+    
+    .forms h3{
+        margin-top: 30px;
+        font-size: 3rem;
+    } 
+    
+    .forms p{
+        margin-top: 20px;
+        opacity: 0.8;
+        width: 80%;
+        text-align: center;
+    }
+}
+
+/* modes */
