--- a/contact/contact.css
+++ b/contact/contact.css
@@ -79,3 +79,59 @@
 #form button:hover{
     background: #8acbcf;
 }
+
+
+/* responsive */
+
+@media screen and (max-width:991px){
+    .contact{
+        padding: 200px 30px;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    .info{
+        display: flex;
+        width: 100%;
+        margin-top: 10px;
+        flex-direction: column;
+    }
+    
+    .info-text{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    .info-text h1{
+        font-size: 4rem;
+        width: 100%;
+        line-height: 1.2;
+        opacity: .8;
+    }
+    
+    .info-text p{
+        font-size: 1.2rem;
+        width: 100%;
+        margin-top: 30px;
+    }
+    #form{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-left: 0px;
+        margin-top: 30px;
+    }
+    
+    #form button{
+        padding: 25px;
+        margin-top: 30px;
+        width: 40%;
+    }
+    
+    
+    #form button:hover{
+        background: #8acbcf;
+    }
+}
