--- a/about/about.css
+++ b/about/about.css
@@ -5,6 +5,7 @@
     align-items: center;
     padding: 30px;
     padding-top: 250px;
+    padding-bottom: 150px;
     background: rgb(247, 216, 216);
 }
 
