--- a/css/style.css
+++ b/css/style.css
@@ -106,18 +106,19 @@ nav ul li a.active {
         position: absolute;
         width: 100%;
         height: calc(100vh - 50px);
-        background: #333;
+        background: #222;
         left: -100%;
         top: 50px;
         transition: 0.5s;
     }
-    header nav.acive {
+    header nav.active {
         left: 0;
     }
     header nav,
     header nav ul {
         display: block;
         text-align: center;
+        margin-top: 50px;
     }
     nav ul li a {
         border-bottom: 1px solid rgba(0, 0, 0, .2);
